// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AmeliproSelect > Snapshots > renders the component with all properties filled in 1`] = `
<div
  class="modified-classes"
  id="modified-unique-id-container"
  style="margin-bottom: 12px; max-width: modified-global-max-width; min-width: modified-global-min-width;"
>
  <div class="
    amelipro-select__wrapper
    d-flex
    flex-column
    flex-md-row
    w-100
  ">
    <div class="
      align-start
      d-inline-flex
      mr-md-2
      mt-md-2
    ">
      <label
        class="
          amelipro-select__label
          mr-2
        "
        for="modified-unique-id"
        id="modified-unique-id-label"
        style="max-width: modified-label-max-width; min-width: modified-label-min-width;"
      >
        Modified label
        <span>
          <span aria-hidden="true">
            &nbsp;*
          </span>
          <span class="d-sr-only">
            &nbsp;Champ obligatoire
          </span>
        </span>
      </label>
    </div>
    <v-select-stub
      active="false"
      aria-required="true"
      autofocus="false"
      bgcolor="ap-grey-lighten-2"
      chips="false"
      class="
        amelipro-select
        pt-0
      "
      clearable="true"
      clearicon="$clear"
      closablechips="false"
      closetext="$vuetify.close"
      color="ap-blue-darken-1"
      counter="false"
      density="compact"
      direction="horizontal"
      disabled="true"
      eager="false"
      errormessages=""
      flat="false"
      focused="false"
      hidedetails="true"
      hidenodata="false"
      hideselected="false"
      hidespinbuttons="false"
      id="modified-unique-id"
      itemchildren="false"
      itemprops="true"
      items="[object Object],[object Object],[object Object]"
      itemtitle="title"
      itemvalue="value"
      loading="false"
      maxerrors="1"
      menu="false"
      menuicon="$dropdown"
      messages=""
      modelvalue="modified-value"
      multiple="false"
      nodatatext="$vuetify.noDataText"
      openonclear="false"
      opentext="$vuetify.open"
      persistentclear="false"
      persistentcounter="false"
      persistenthint="false"
      persistentplaceholder="false"
      placeholder="Modified placeholder"
      readonly=""
      returnobject="false"
      reverse="false"
      role="combobox"
      rules="() => "modified-rule",mocked-is-required"
      singleline="false"
      style="max-width: modified-input-max-width; min-width: modified-input-min-width;"
      tile="false"
      transition="[object Object]"
      type="text"
      validateon="input"
      variant="outlined"
    ></v-select-stub>
  </div>
  <!-- v-if -->
</div>
`;

exports[`AmeliproSelect > Snapshots > renders the component with only required properties filled in 1`] = `
<div
  class=""
  id="required-unique-id-container"
  style="margin-bottom: 12px;"
>
  <div class="
    amelipro-select__wrapper
    d-flex
    flex-column
    w-100
  ">
    <div class="
      align-start
      d-inline-flex
    ">
      <label
        class="
          amelipro-select__label
          mr-2
        "
        for="required-unique-id"
        id="required-unique-id-label"
      >
        Required label
        <!-- v-if -->
      </label>
    </div>
    <v-select-stub
      active="false"
      aria-required="false"
      autofocus="false"
      bgcolor="ap-white"
      chips="false"
      class="
        amelipro-select
        pt-0
      "
      clearable="false"
      clearicon="$clear"
      closablechips="false"
      closetext="$vuetify.close"
      color="ap-blue-darken-1"
      counter="false"
      density="compact"
      direction="horizontal"
      disabled="false"
      eager="false"
      errormessages=""
      flat="false"
      focused="false"
      hidedetails="false"
      hidenodata="false"
      hideselected="false"
      hidespinbuttons="false"
      id="required-unique-id"
      itemchildren="false"
      itemprops="true"
      items=""
      itemtitle="title"
      itemvalue="value"
      loading="false"
      maxerrors="1"
      menu="false"
      menuicon="$dropdown"
      messages=""
      multiple="false"
      nodatatext="$vuetify.noDataText"
      openonclear="false"
      opentext="$vuetify.open"
      persistentclear="false"
      persistentcounter="false"
      persistenthint="false"
      persistentplaceholder="false"
      returnobject="false"
      reverse="false"
      role="combobox"
      rules=""
      singleline="false"
      tile="false"
      transition="[object Object]"
      type="text"
      validateon="input"
      variant="outlined"
    ></v-select-stub>
  </div>
  <!-- v-if -->
</div>
`;

exports[`AmeliproSelect > render correctly 1`] = `
<div
  class=""
  id="my-select-id-container"
  style="margin-bottom: 12px;"
>
  <div class="
    amelipro-select__wrapper
    d-flex
    flex-column
    w-100
  ">
    <div class="
      align-start
      d-inline-flex
    ">
      <label
        class="
          amelipro-select__label
          mr-2
        "
        for="my-select-id"
        id="my-select-id-label"
      >
        Label du select
        <!-- v-if -->
      </label>
    </div>
    <div class="
      amelipro-select
      pt-0
      v-input
      v-input--center-affix
      v-input--density-compact
      v-input--horizontal
      v-locale--is-ltr
      v-select
      v-select--single
      v-text-field
      v-theme--light
    ">
      <!---->
      <div class="v-input__control">
        <div
          class="
            bg-ap-white
            v-field
            v-field--appended
            v-field--center-affix
            v-field--has-background
            v-field--no-label
            v-field--variant-outlined
            v-locale--is-ltr
            v-theme--light
          "
          role="combobox"
        >
          <div class="v-field__overlay"></div>
          <div class="v-field__loader">
            <div
              aria-hidden="true"
              aria-valuemax="100"
              aria-valuemin="0"
              class="
                v-locale--is-ltr
                v-progress-linear
                v-theme--light
              "
              role="progressbar"
              style="top: 0px; height: 0px; --v-progress-linear-height: 2px;"
            >
              <!---->
              <div
                class="
                  bg-ap-blue-darken-1
                  v-progress-linear__background
                "
                style="opacity: NaN;"
              ></div>
              <div
                class="
                  bg-ap-blue-darken-1
                  v-progress-linear__buffer
                "
                style="opacity: NaN; width: 0%;"
              ></div>
              <transition-stub
                appear="false"
                css="true"
                name="fade-transition"
                persisted="false"
              >
                <div class="v-progress-linear__indeterminate">
                  <div class="
                    bg-ap-blue-darken-1
                    long
                    v-progress-linear__indeterminate
                  "></div>
                  <div class="
                    bg-ap-blue-darken-1
                    short
                    v-progress-linear__indeterminate
                  "></div>
                </div>
              </transition-stub>
              <!---->
            </div>
          </div>
          <!---->
          <div
            class="v-field__field"
            data-no-activator=""
          >
            <!---->
            <!---->
            <!---->
            <div
              class="v-field__input"
              data-no-activator=""
            >
              <!---->
              <!---->
              <input
                aria-label="Open"
                aria-required="false"
                id="my-select-id"
                inputmode="none"
                size="1"
                title="Open"
                type="text"
                value=""
              />
            </div>
            <!---->
          </div>
          <!---->
          <div class="v-field__append-inner">
            <!---->
            <i
              aria-hidden="true"
              class="
                mdi
                mdi-menu-down
                notranslate
                v-icon
                v-icon--size-default
                v-select__menu-icon
                v-theme--light
              "
            ></i>
            <!---->
          </div>
          <div class="v-field__outline">
            <div class="v-field__outline__start"></div>
            <!---->
            <div class="v-field__outline__end"></div>
            <!---->
          </div>
        </div>
      </div>
      <!---->
      <div
        aria-live="polite"
        class="v-input__details"
        id="my-select-id-messages"
        role="alert"
      >
        <transition-group-stub
          appear="false"
          class="v-messages"
          css="true"
          name="slide-y-transition"
          persisted="false"
          tag="div"
        >
          <!---->
        </transition-group-stub>
        <!---->
      </div>
    </div>
  </div>
  <!-- v-if -->
</div>
`;
